--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Prakhi Asati | Cybersecurity Portfolio</title>
-  <link rel="stylesheet" href="style.css"/>
+  <title>Ishnoor Kaur | Cybersecurity Portfolio</title>
+  <link rel="stylesheet" href="styles.css"/>
 </head>
 <script>
   const sections = document.querySelectorAll("section");
@@ -29,22 +29,22 @@
 
   <!-- HERO / INTRODUCTION -->
   <header>
-    <h1>Prakhi Asati</h1>
+    <h1>Ishnoor Kaur</h1>
     <p class="tagline">
       Cybersecurity Student | Ethical Hacking Enthusiast | Software Developer
     </p>
 
     <div class="links">
-  <a href="mailto:prakhi06032005@gmail.com">
+  <a href="mailto:kaurish004@gmail.com">
     <i class="fas fa-envelope"></i> Email
   </a>
-  <a href="tel:+919302018251">
+  <a href="tel:+91 9056260152">
     <i class="fas fa-phone"></i> Phone
   </a>
-  <a href="https://www.linkedin.com/in/prakhi-asati-834a8b3aa/" target="_blank">
+  <a href="https://www.linkedin.com/in/ishnoor-kaur-a98563284/" target="_blank">
     <i class="fab fa-linkedin"></i> LinkedIn
   </a>
-  <a href="https://github.com/Perfectopro" target="_blank">
+  <a href="https://github.com/kaurish004" target="_blank">
     <i class="fab fa-github"></i> GitHub
   </a>
   <a href="resume.pdf" download>
