--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <a href="https://github.com/kaurish004" target="_blank">
     <i class="fab fa-github"></i> GitHub
   </a>
-  <a href="CV.pdf" download>
+  <a href="file:///C:/Users/kauri/Downloads/CV.pdf" download>
     <i class="fas fa-file-download"></i> Resume
   </a>
 </div>
