--- a/index.html
+++ b/index.html
@@ -56,17 +56,16 @@
 
   <!-- INTRODUCTION & SUMMARY -->
   <section>
-    <h2>Introduction & Professional Summary</h2>
+    <h2>Introduction </h2>
     <p>
-      I am a Computer Science and Engineering undergraduate specializing in cybersecurity concepts,
-      ethical hacking practices, and secure software development. My academic training, combined with
-      hands-on technical projects and cybersecurity labs, has enabled me to understand how systems
-      are designed, attacked, and defended in real-world environments.
+      I am a Computer Science and Engineering undergraduate with a strong interest in software development
+      and web technologies. I enjoy building user-friendly, responsive web applications and turning 
+      ideas into functional digital experiences. 
     </p>
     <p>
-      I am passionate about continuous learning and aim to build a responsible career in cybersecurity
-      by applying ethical principles, technical expertise, and analytical thinking to protect digital
-      infrastructure.
+      Alongside my technical journey, I actively participate in academic and cultural events,
+      which has helped me develop leadership, coordination, and teamwork skills. I am always
+      eager to learn new technologies and apply my skills to real-world projects.
     </p>
   </section>
 
@@ -74,10 +73,12 @@
   <section>
     <h2>About Me</h2>
     <p>
-      Currently pursuing B.Tech in Computer Science and Engineering at Lovely Professional University,
-      I actively explore cybersecurity platforms such as TryHackMe, HackTheBox, and PicoCTF to gain
-      practical exposure. I enjoy working on security-focused tools and projects that enhance my
-      understanding of networks, system vulnerabilities, and defensive strategies.
+      I am a Computer Science and Engineering undergraduate at Lovely Professional University, with a growing interest in Cyber Security
+      and secure systems. I have hands-on experience with Linux, Kali Linux, Metasploitable, VMware, and programming in Python, C/C++, and Java.
+    </p>
+    <p></p>
+      I enjoy understanding system behavior, identifying vulnerabilities, and applying security best practices, 
+    supported by strong teamwork and coordination skills.
     </p>
   </section>
 
