--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
   <!-- INTRODUCTION & SUMMARY -->
   <section>
-    <h2>Introduction </h2>
+    <h2>Introduction</h2>
     <p>
       I am a Computer Science and Engineering undergraduate with a strong interest in software development
       and web technologies. I enjoy building user-friendly, responsive web applications and turning 
@@ -315,14 +315,14 @@
   <section>
   <h2>Contact Information</h2>
   <p><strong>Email:</strong>
-    <a href="mailto:prakhi06032005@gmail.com">
-      prakhi06032005@gmail.com
+    <a href="mailto:kaurish004@gmail.com">
+     kaurish004@gmail.com
     </a>
   </p>
 
   <p><strong>Phone:</strong>
-    <a href="tel:+919302018251">
-      +91-9302018251
+    <a href="tel:+919056260152">
+      +91-9056260152
     </a>
   </p>
 
@@ -330,7 +330,7 @@
 
 
   <footer>
-    <p>© 2026 Prakhi Asati | Cybersecurity Student Portfolio</p>
+    <p>© 2026 Ishnoor Kaur | Cybersecurity Student Portfolio</p>
   </footer>
 
 </body>
