--- a/index.html
+++ b/index.html
@@ -109,29 +109,13 @@
     </p>
   </div>
 
-  <div class="skill-block">
-    <h3>Networking Knowledge</h3>
-    <p>
-      TCP/IP Protocol Suite, OSI Model, DNS, HTTP/HTTPS,
-      Port Scanning Concepts, Network Traffic Analysis
-    </p>
-  </div>
-
-  <div class="skill-block">
-    <h3>Web & Development Technologies</h3>
-    <p>
-      HTML, CSS, ReactJS, ExpressJS, Secure Web Development Basics
-    </p>
-  </div>
-
-  <div class="skill-block">
+    <div class="skill-block">
     <h3>Database & System Knowledge</h3>
     <p>
-      MySQL, Operating System Fundamentals (Windows & Linux Basics),
-      File Permissions and Access Control
+      MySQL, Operating System Fundamentals (Windows & Linux Basics), File Permissions and Access Control
     </p>
   </div>
-
+    
   <div class="skill-block">
     <h3>Professional & Ethical Skills</h3>
     <p>
@@ -142,92 +126,36 @@
 
 </section>
 
-<section>
-  <h2>Cybersecurity Learning Journey</h2>
-
-  <div class="timeline">
-    <div class="timeline-item">
-      <span>2023</span>
-      <p>Started B.Tech CSE and core programming fundamentals</p>
-    </div>
-
-    <div class="timeline-item">
-      <span>2024</span>
-      <p>Focused on networking, cybersecurity courses, and hands-on labs</p>
-    </div>
-
-    <div class="timeline-item">
-      <span>2025</span>
-      <p>Built security-focused projects, GitHub portfolio, and CTF exposure</p>
-    </div>
-  </div>
-</section>
-
   <!-- PROJECTS -->
   <section>
   <h2>Projects</h2>
 
   <div class="card">
-    <h3>Network Vulnerability Scanning Tool</h3>
-    <p class="tech">Python | Networking | Cybersecurity</p>
-    <p>
-      Designed and implemented a basic network vulnerability scanning tool to identify
-      active hosts and open ports within a given network range. The project focuses on
-      understanding common network exposure points and reconnaissance techniques used
-      during security assessments.
+    <h3>Culinary Content Platform</h3>
+    <p class="tech">HTML, CSS, JavaScript | <a href="https://github.com/kaurish004/CN053" target="_blank">
+    <i class="fab fa-github"></i> GitHub
+  </a>
     </p>
     <p>
-      This project enhanced my knowledge of TCP/IP protocols, port states, and ethical
-      vulnerability discovery practices while emphasizing responsible security testing.
-    </p>
-  </div>
-
-  <div class="card">
-    <h3>Password Security Analysis System</h3>
-    <p class="tech">Python | Security Analysis</p>
-    <p>
-      Developed a password security analysis system that evaluates passwords based on
-      length, complexity, entropy, and resistance to common attack patterns. The system
-      helps users understand secure authentication practices and the importance of strong
-      credential management.
-    </p>
-    <p>
-      Through this project, I gained deeper insight into authentication vulnerabilities
-      and defensive security strategies used to prevent credential-based attacks.
+      Developed a fully responsive recipe-sharing web platform featuring categorized content and a modern, 
+      user-friendly interface. Implemented interactive JavaScript-based features including account simulation, 
+      recipe submission, and real-time form validation to enhance user experience. Focused on performance 
+      optimization, accessibility, and cross-device compatibility. The project was deployed on GitHub, 
+      demonstrating strong front-end development and version control skills.
     </p>
   </div>
 
   <div class="card">
-    <h3>Network Traffic Analysis Using Wireshark</h3>
-    <p class="tech">Wireshark | Network Protocols | Security Monitoring</p>
+    <h3>Air Pollution and It’s Contro</h3>
+    <p class="tech">HTML, CSS | <a href="https://github.com/kaurish004/Air-Pollution-and-its-Control" target="_blank">
+    <i class="fab fa-github"></i> GitHub
+  </a></p>
     <p>
-      Conducted detailed network traffic analysis using Wireshark to study packet flow,
-      protocol behavior, and potential security anomalies within a controlled environment.
-      The project involved capturing and analyzing HTTP, TCP, UDP, and DNS traffic.
+     Designed and developed an informative website highlighting air pollution, its causes, 
+      effects, and preventive measures. Created a clean and structured layout with responsive 
+      design to ensure readability and accessibility across devices. Emphasized clear 
+      navigation, visual clarity, and public awareness, with deployment via GitHub Pages for easy access.
     </p>
-    <p>
-      This work strengthened my understanding of network monitoring, intrusion indicators,
-      and how abnormal traffic patterns can signal potential security threats.
-    </p>
-  </div>
-
-  <div class="card">
-    <h3>Cybersecurity Awareness and Best Practices Website</h3>
-    <p class="tech">HTML | CSS | Cybersecurity Fundamentals</p>
-    <p>
-      Created an informational website aimed at educating users about common cyber threats
-      such as phishing, malware, weak passwords, and social engineering attacks. The site
-      presents practical prevention techniques and security best practices.
-    </p>
-    <p>
-      This project improved my ability to communicate technical security concepts clearly
-      while promoting ethical awareness and responsible digital behavior.
-    </p>
-  </div>
-
-</section>
-
-
 
   <!-- CERTIFICATIONS -->
   <section>
@@ -236,37 +164,42 @@
   <ul>
     <li>
       TCP/IP and Advanced Topics – Coursera (University of Colorado)  
-      (<a href="TCP IP and Advanced topics.pdf" target="_blank">View Certificate</a>)
+      (<a href="file:///C:/Certificates/TCP%20IP.pdf" target="_blank">View Certificate</a>)
     </li>
 
     <li>
       The Bits and Bytes of Computer Networks – Coursera (Google)  
-      (<a href="The Bits and Bytes of computer networks.pdf" target="_blank">View Certificate</a>)
+      (<a href="file:///C:/Certificates/Bits%20and%20Bytes%20of%20CN.pdf" target="_blank">View Certificate</a>)
     </li>
 
     <li>
       Peer-to-Peer Protocols and Local Area Networks – Coursera  
-      (<a href="Peer-to-peer protocol and local area networks.pdf" target="_blank">View Certificate</a>)
+      (<a href="file:///C:/Certificates/Peer%20To%20Peer%20Protocols%20and%20LAN.pdf" target="_blank">View Certificate</a>)
     </li>
 
     <li>
       Fundamentals of Network Communication – Coursera  
-      (<a href="fundamentals of network communication.pdf" target="_blank">View Certificate</a>)
+      (<a href="file:///C:/Certificates/Fundamentals%20of%20Network%20Communication.pdf" target="_blank">View Certificate</a>)
     </li>
 
     <li>
       Introduction to Hardware and Operating Systems – Coursera (IBM)  
-      (<a href="Introduction to hardware and operating Systems.pdf" target="_blank">View Certificate</a>)
+      (<a href="file:///C:/Certificates/introduction%20to%20hardware%20and%20OS.pdf" target="_blank">View Certificate</a>)
     </li>
 
     <li>
       Computer Communications Specialization – Coursera  
-      (<a href="Computer Communications.pdf" target="_blank">View Certificate</a>)
+      (<a href="file:///C:/Certificates/computer%20communications'.pdf" target="_blank">View Certificate</a>)
     </li>
 
     <li>
-      Computational Theory: Language Principles & Finite Automata  
-      (<a href="Computational Theory.pdf" target="_blank">View Certificate</a>)
+      C Programming Language – Cypher Schools
+      (<a href="file:///C:/Certificates/cipher%20school%20C.pdf" target="_blank">View Certificate</a>)
+    </li>
+
+    <li>
+      Linux Fundamentals - (LPU)
+      (<a href="file:///C:/Certificates/Linux%20Fundamentals.pdf" target="_blank">View Certificate</a>)
     </li>
   </ul>
 </section>
