--- a/index.html
+++ b/index.html
@@ -137,11 +137,16 @@
   </a>
     </p>
     <p>
-      Developed a fully responsive recipe-sharing web platform featuring categorized content and a modern, 
-      user-friendly interface. Implemented interactive JavaScript-based features including account simulation, 
-      recipe submission, and real-time form validation to enhance user experience. Focused on performance 
-      optimization, accessibility, and cross-device compatibility. The project was deployed on GitHub, 
-      demonstrating strong front-end development and version control skills.
+      Developed and deployed a fully responsive recipe-sharing web application designed to deliver a
+      smooth and engaging user experience. The platform features well-structured recipe categories, 
+      intuitive navigation, and a modern UI optimized for both desktop and mobile devices.
+    </p>
+    <p>
+      Implemented interactive JavaScript functionalities such as simulated user accounts, recipe 
+      submission workflows, and real-time form validation to ensure structured data input and improved 
+      usability. Special attention was given to accessibility, performance optimization, and clean front-end 
+      architecture. The project was version-controlled and hosted on GitHub, demonstrating practical knowledge 
+      of front-end development, UI design principles, and deployment workflows.
     </p>
   </div>
 
@@ -151,10 +156,15 @@
     <i class="fab fa-github"></i> GitHub
   </a></p>
     <p>
-     Designed and developed an informative website highlighting air pollution, its causes, 
-      effects, and preventive measures. Created a clean and structured layout with responsive 
-      design to ensure readability and accessibility across devices. Emphasized clear 
-      navigation, visual clarity, and public awareness, with deployment via GitHub Pages for easy access.
+     Designed and developed an informative and visually engaging website focused on spreading awareness
+      about air pollution. The project presents detailed content covering causes, effects, and preventive
+      measures in a clear and structured format.
+    </p>
+    <p>
+      Built a responsive layout with clean typography, consistent color schemes, and easy navigation to 
+      enhance readability across different devices. Emphasized accessibility and content clarity while ensuring 
+      public availability through GitHub Pages deployment. This project reflects strong fundamentals in static 
+      web development, content organization, and user-centric design.
     </p>
 
   <!-- CERTIFICATIONS -->
