--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   </div>
 
   <div class="card">
-    <h3>Air Pollution and It’s Contro</h3>
+    <h3>Air Pollution and It’s Control</h3>
     <p class="tech">HTML, CSS | <a href="https://github.com/kaurish004/Air-Pollution-and-its-Control" target="_blank">
     <i class="fab fa-github"></i> GitHub
   </a></p>
