--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ishnoor Kaur | Cybersecurity Portfolio</title>
+  <title>Ishnoor Kaur | Portfolio</title>
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <script>
