--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
   <a href="https://github.com/kaurish004" target="_blank">
     <i class="fab fa-github"></i> GitHub
   </a>
-  <a href="https://drive.google.com/file/d/1DA3PD1_2Z4UJvkj6wqqHcaHEwH8WkAdd/view?usp=sharing" download>
-    <i class="fas fa-file-download"></i> Resume
+  <a href="https://drive.google.com/file/d/1DA3PD1_2Z4UJvkj6wqqHcaHEwH8WkAdd/view?usp=sharing" download>Resume
   </a>
 </div>
 
