--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
   <ul>
     <li>
       Fundamentals of Network Communication – Coursera  
-      (<a href="file:///C:/Certificates/Fundamentals%20of%20Network%20Communication.pdf" target="_blank">View Certificate</a>)
+      (<a href="file:///C:/Certificates/Fundamentals%20of%20Network%20Communication.pdf">View Certificate</a>)
     </li>
     
     <li>
