--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
   <ul>
     <li>
       Fundamentals of Network Communication – Coursera  
-      (<a href="file:///C:/Certificates/Fundamentals%20of%20Network%20Communication.pdf" download>View Certificate</a>)
+      (<a href="https://www.coursera.org/account/accomplishments/certificate/ABTD7TU0JK0I" download>View Certificate</a>)
     </li>
     
     <li>
