--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     
     <li>
       C Programming Language – Cypher Schools
-      (<a href="file:///C:/Certificates/cipher%20school%20C.pdf" target="_blank">View Certificate</a>)
+      (<a href="file:///C:/Certificates/cipher%20school%20C.pdf" download>View Certificate</a>)
     </li>
 
     <li>
